--- a/onboard_detector/cfg/detector_param.yaml
+++ b/onboard_detector/cfg/detector_param.yaml
@@ -13,11 +13,13 @@ odom_topic: /CERLAB/quadcopter/odom
 
 # Camera Parameters
 # depth_intrinsics: [386.22674560546875, 386.22674560546875, 317.3930969238281, 239.78431701660156] # fx,  fy, cx, cy realsense
-depth_intrinsics: [554.254691191187, 554.254691191187, 320.5, 240.5] # fx,  fy, cx, cy simulation
-color_intrinsics: [554.254691191187, 554.254691191187, 320.5, 240.5] # fx,  fy, cx, cy simulation
+# depth_intrinsics: [554.254691191187, 554.254691191187, 320.5, 240.5] # fx,  fy, cx, cy simulation
+# color_intrinsics: [554.254691191187, 554.254691191187, 320.5, 240.5] # fx,  fy, cx, cy simulation
 # color_intrinsics: [608.08740234375, 608.08740234375, 317.48284912109375, 234.11557006835938] # intel realsense
 # depth_scale_factor: 1000 # 1000 for Intel Realsense Camera
-depth_scale_factor: 10 # simulation
+depth_intrinsics: [612.47509765625, 611.630615234375, 323.4533996582031, 233.1645050048828]
+color_intrinsics: [612.47509765625, 611.630615234375, 323.4533996582031, 233.1645050048828]
+depth_scale_factor: 1000 # simulation
 depth_min_value: 0.5
 depth_max_value: 5.0
 depth_filter_margin: 10 # filter
